--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <h1>hey iam online </h1>
+    <h1>hey iam online </h1>
+    <h1>hey iam online </h1>
+    <h1>hey iam online </h1>
+    <h1>hey iam online </h1>
+    <h1>hey iam online </h1>
     <script type="module" src="/main.tsx"></script>
   </body>
 </html>
